frontend_tests/negative/offline_dependency/go.mod
module example.com/renvotests/negative/offline_dependency

go 1.25

require example.com/missing v1.0.0
